# cdd-openapi-test-harness

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  COMPLIANCE.md  ECOSYSTEM_COMPLIANCE_OAS_3_2_0.md  README.md  TICKETS.md  USAGE.md  build_cdd.sh  cdd-c-test-output.txt  local-test.sh  run_cdd_c_sdk.sh  run_tests.sh  saboteur_server.py  test_harness.sh  update_subs.sh  update_subs_md.sh  verify_coverage.py
.github/workflows/: roundtrip.yml  test.yml
cdd-java-client-test/: pom.xml
cdd-java-client-test/.github/workflows/: ci.yml
cdd-java-client-test/src/main/java/: Sdk.java
cdd-java-client-test/src/test/java/: SwaggerPetstoreIntegrationTest.java  SwaggerPetstoreMockServer.java
cdd-rust-client-2/: Cargo.toml
cdd-rust-client-2/src/handlers/: pet.rs  store.rs  user.rs
cdd-rust-client-2/src/models/: generated.rs
cdd-rust-client-2/tests/: api_contracts.rs
scripts/: check_all_conformance.sh  check_conformance_project.sh  detect_conformance.py  generate_dashboard.py  generate_dashboard.sh  update_all_tables.sh  update_readme_status.py  update_testing_coverage.py
