[package]
name = "cdd-rust-client-2"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = "4.2"
uuid = { version = "1.8", features = ["serde"] }
